--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,3 +3,13 @@
   padding: 0;
   background-color: blanchedalmond;
 }
+.content {
+  width: 50vw;
+  height: 50vh;
+  margin: 15%;
+  border: brown 2px solid;
+}
+.image {
+  width: 20rem;
+  height: 20rem;
+}
